src/frontend/tui/snapshots/illustrious_manager__frontend__tui__tasks_picker__tests__tasks_picker_empty.snap
---
source: src/frontend/tui/tasks_picker.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌ Tasks (j/k to navigate, q to close) ─────────────────────────┐        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                         No tasks yet.                        │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
