src/frontend/tui/snapshots/illustrious_manager__frontend__tui__tasks_picker__tests__tasks_picker_second_selected.snap
---
source: src/frontend/tui/tasks_picker.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌ Tasks (j/k to navigate, q to close) ─────────────────────────┐        "
"        │  ● first task                                                │        "
"        │> ○ second task                                               │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
